# langchain-discord

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt  setup.py  webhook.py
examples/: main.py
langchain_discord/: __init__.py  webhook.py
langchain_discord.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
utils/: webhook.py
