[project]
name = "langchain_discord"
version = "0.0.10"
authors = [
  { name="Lennard Dorst", email="lennardsolana@gmail.com" },
]
description = "A list of tools for LangChain to power Discord (Webhooks, etc.)."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/0w9/langchain-discord"